--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,25 @@
   scroll-behavior: smooth;
   color-scheme: dark;
 }
+
+.green-pink-gradient {
+  background: "#00cea8";
+  background: linear-gradient(90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+  background: -webkit-linear-gradient(-90.13deg, #00cea8 1.9%, #bf61ff 97.5%);
+}
+
+.violet-gradient {
+  background: #804dee;
+  background: linear-gradient(-90deg, #804dee 0%, rgba(60, 51, 80, 0) 100%);
+  background: -webkit-linear-gradient(
+    -90deg,
+    #804dee 0%,
+    rgba(60, 51, 80, 0) 100%
+  );
+}
+
+/* Firefox,chrome */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #915EFF #f1f1f1;
+}
